--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,37 @@
 /* style for text */
 * {
   font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  color: #757575;
+}
+h1 {
+  font-size: 44px;
+  color: #fff;
+}
+h2 {
+  font-size: 36px;
+  color: #212121;
+}
+h3 {
+  font-size: 16px;
+  color: #212121;
+}
+h4 {
+  font-size: 14px;
+  color: #212121;
+}
+aside {
+  background: #757575;
+  width: 1600px;
+  height: 600px;
+}
+button {
+  background: #2196f3;
+  width: 200px;
+  height: 50px;
+  color: #fff;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -19,13 +50,16 @@ a {
   display: inline-flex;
 }
 .main-menu {
-  color: black;
+  color: #212121;
   font-weight: 700;
   font-size: 14px;
 }
 .main-menu:hover,
 .main-menu:focus {
   color: #2196f3;
+}
+li a span {
+  color: #212121;
 }
 li.active a span {
   color: #2196f3;
@@ -38,9 +72,7 @@ li.active a span {
   font-size: 15px;
   margin-bottom: 20px;
 }
-h1 {
-  font-size: 44px;
-}
+
 .address-box {
   text-decoration: none;
 }
@@ -57,4 +89,8 @@ li {
   word-wrap: normal;
   font-size: 15px;
   margin-bottom: 20px;
+}
+.sorter-item:hover {
+  background: #2196f3;
+  color: #fff;
 }
