--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,73 @@
-/* style for text */
-* {
+
+:root {
+  --title-text-color: #212121;
+  --main-text-color: #757575;
+  --white-color: #fff;
+  --assent-color: #2196f3;
+  --logo-color: #000;
+  --bg-color: #f5f4fa;
+  --secondr-bg-color: #2f303a;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  color: var(--main-text-color);
+  background-color: var(--white-color);
   font-family: "Roboto", sans-serif;
   font-size: 14px;
-  color: #757575;
+  font-weight: 400;
 }
+
+/* style for text */
 h1 {
   font-size: 44px;
-  color: #fff;
+  color: var(--white-color);
 }
 h2 {
   font-size: 36px;
-  color: #212121;
+  color: var(--title-text-color);
 }
 h3 {
   font-size: 16px;
-  color: #212121;
+  color: var(--title-text-color);
 }
 h4 {
   font-size: 14px;
-  color: #212121;
+  color: var(--title-text-color);
 }
 aside {
-  background: #757575;
+  background: var(--secondr-bg-color);
   width: 1600px;
   height: 600px;
 }
 button {
-  background: #2196f3;
+  background: var(--assent-color);
   width: 200px;
   height: 50px;
-  color: #fff;
+  color: (var(--white-color);
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
+
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
-  color: black;
+  color: var(--logo-color);
 }
 .part-logo {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
-  color: #2196f3;
+  color: var(--assent-color);
 }
 a {
   text-decoration: none;
@@ -50,19 +76,19 @@ a {
   display: inline-flex;
 }
 .main-menu {
-  color: #212121;
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
 }
 .main-menu:hover,
 .main-menu:focus {
-  color: #2196f3;
+  color: var(--assent-color);
 }
 li a span {
-  color: #212121;
+  color: var(--title-text-color);
 }
 li.active a span {
-  color: #2196f3;
+  color: var(--assent-color);
 }
 .list-tab li a span {
   float: left;
@@ -73,12 +99,10 @@ li.active a span {
   margin-bottom: 20px;
 }
 
-.address-box {
-  text-decoration: none;
-}
 li {
   list-style-type: none;
 }
+
 .sorter {
   display: inline-flex;
 }
@@ -91,6 +115,6 @@ li {
   margin-bottom: 20px;
 }
 .sorter-item:hover {
-  background: #2196f3;
-  color: #fff;
+  background: var(--assent-color);
+  color: var(--white-color);
 }
