--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ body {
   font-size: 14px;
   font-weight: 400;
 }
+li {
+  list-style-type: none;
+}
 
 /* style for text */
 h1 {
@@ -44,21 +47,8 @@ h4 {
   font-size: 14px;
   color: var(--title-text-color);
 }
-aside {
-  background: var(--secondr-bg-color);
-  width: 1600px;
-  height: 600px;
-}
-button {
-  background: var(--assent-color);
-  width: 200px;
-  height: 50px;
-  color: (var(--white-color);
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
-}
 
-
+/*header*/
 .logo {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
@@ -81,7 +71,9 @@ a {
   font-size: 14px;
 }
 .main-menu:hover,
-.main-menu:focus {
+.main-menu:focus,
+.contacts-item:hover,
+.contacts-item:focus {
   color: var(--assent-color);
 }
 li a span {
@@ -95,16 +87,24 @@ li.active a span {
   padding: 10px 18px;
   margin-right: 4px;
   word-wrap: normal;
-  font-size: 15px;
   margin-bottom: 20px;
 }
-
-li {
-  list-style-type: none;
+.contacts-item {
+  color: var(--main-text-color);
+  font-weight: 400;
+  font-size: 14px;
 }
-
+.contacts-bloc div {
+  float: left;
+  padding: 10px 18px;
+  margin-right: 4px;
+  word-wrap: normal;
+  margin-bottom: 20px;
+}
+/*main content*/
 .sorter {
   display: inline-flex;
+  background: var(--bg-color);
 }
 .sorter li {
   float: left;
@@ -118,3 +118,17 @@ li {
   background: var(--assent-color);
   color: var(--white-color);
 }
+aside {
+  background: var(--secondr-bg-color);
+  width: 1600px;
+  height: 600px;
+}
+button {
+  background: var(--assent-color);
+  width: 200px;
+  height: 50px;
+  color: (var(--white-color);
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+}
+
