--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,14 @@ body {
   font-size: 14px;
   font-weight: 400;
 }
+footer {
+  width: 1600px;
+  height: 252px;
+  background-color: var(--secondr-bg-color);
+}
+.address-text {
+  color: var(--white-color);
+}
 li {
   list-style-type: none;
 }
@@ -131,4 +139,5 @@ button {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
+
 
